Fixes the battlemap overflowing out of the page.

--- a/src/battlemap/www/style.css
+++ b/src/battlemap/www/style.css
@@ -47,6 +47,7 @@
 .battlemap-actual
 {
    display: inline-block;
+   transform-origin: top left;
 }
 
 /** Inside the container ******************************************************/
